--- a/src/css/Dropdown.scss
+++ b/src/css/Dropdown.scss
@@ -80,7 +80,7 @@ https://bulma.io/documentation/form/select/
   z-index: 4;
 }
 
-.icon {
+.control .icon {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
