--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -38,7 +38,6 @@ a {
 
 .container {
   margin: 0 auto;
-  /*padding: 0 2rem;*/
 }
 .container-section {
   padding: 0;
@@ -79,7 +78,6 @@ h1 {
 @media (min-width: 1250px) {
   h1 {
     font-size: 3.5rem;
-    /*font-weight: 400;*/
   }
   .container {
     max-width: 1200px;
@@ -101,7 +99,6 @@ h1 {
   font-size: $medium-font;
 }
 .share-buttons > div {
-  /*text-align: center;*/
   padding: 1rem 0;
 }
 @media (min-width: 480px) {
@@ -109,15 +106,9 @@ h1 {
     flex-direction: row;
   }
   .share-buttons > div {
-    /*text-align: center;*/
     padding: 0;
   }
 }
-
-/* .card-conclusion p,
-.card-conclusion li {
-  font-size: 1.25rem;
-} */
 
 .img-responsive {
   max-width: 100%;
@@ -140,9 +131,7 @@ h1 {
 .section {
   padding: 2rem 0;
 }
-.section:nth-child(2n + 1) {
-  /*background-color: #FFBE59;*/
-}
+
 .star {
   transform: translateY(2px);
   margin-left: 2px;
@@ -188,7 +177,7 @@ h1 {
     }
   }
 
-  .introduction {
+  .year2017 .introduction {
     width: calc((100% - #{$spacing*4})/2);
   }
 
@@ -196,6 +185,20 @@ h1 {
     @include flex-center;
     margin: $spacing*4 auto;
   }
+}
+
+.introduction-text {
+  font-size: 20px;
+  p {
+    margin-top: 0;
+  }
+}
+
+// block used in 2016 and 2018 layout to display the introduction under the banner
+.top-with-banner-introduction {
+  margin: 2rem 0;
+  padding: 2rem;
+  border: 1px solid #788080;
 }
 
 .conclusion {
