Add a menu to navigate between years

--- a/src/css/Picture.scss
+++ b/src/css/Picture.scss
@@ -12,6 +12,9 @@
 .year2016 #picture-block {
   background: #e65100 url('2016/logos-bg.png');
 }
+.year2017 #picture-block {
+  background: #e65100 url('2017/logos-bg.png');
+}
 .year2018 #picture-block {
   background: #e65100 url('2018/logos-bg.png');
 }
