Add 2020 background picture

--- a/src/css/picture.css
+++ b/src/css/picture.css
@@ -25,6 +25,10 @@
   background: #e65100 url("2019/logos-bg.png");
 }
 
+.year2020 #picture-block {
+  background: #e65100 url("2020/logos-bg.png");
+}
+
 @media (min-width: 800px) {
   #picture-block {
     height: 300px;
