--- a/src/components/BgPicture/style.module.css
+++ b/src/components/BgPicture/style.module.css
@@ -1,4 +1,4 @@
-.bgpicture {
+.bgPicture {
   margin: 50px auto 100px;
   width: 1050px;
   height: 300px;
@@ -11,7 +11,7 @@
   flex-wrap: wrap;
   background-color: rgba(230, 80, 0, 0.9);
 }
-.bgpicture-grid > div {
+.grid > div {
   opacity: 0.3;
   margin: 0 auto;
   width: 75px;
@@ -19,6 +19,6 @@
   display: flex;
   align-items: center;
 }
-.empty-cell {
+.emptyCell {
   background-color: #b94100;
 }
