--- a/src/components/ProjectIconWall/style.module.css
+++ b/src/components/ProjectIconWall/style.module.css
@@ -1,9 +1,9 @@
-#wall {
+.wall {
   margin: 50px auto 100px;
   width: 400px;
   position: relative;
 }
-#wall .text {
+.wall .text {
   position: absolute;
   top: 0;
   left: 0;
@@ -14,15 +14,15 @@
   text-align: center;
   z-index: 1;
   text-shadow: 0 3px 3px rgba(143, 50, 0, 0.99);
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
 }
-[lang='fr'] #wall .text {
+[lang="fr"] .wall .text {
   font-size: 3rem;
 }
-[lang='es'] #wall .text {
+[lang="es"] .wall .text {
   font-size: 3rem;
 }
-.icon-wall-grid {
+.icon {
   display: flex;
   height: 280px;
   overflow: hidden;
@@ -30,7 +30,7 @@
   background-color: rgba(230, 80, 0, 0.9);
   padding: 0.3rem 0 0 0.3rem;
 }
-.icon-wall-grid div {
+.icon div {
   opacity: 0.3;
   flex: 0 0 20%;
   padding: 0 0.2rem 0.7rem 0;
