--- a/src/css/header.css
+++ b/src/css/header.css
@@ -8,6 +8,7 @@
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
     0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
+
 #header .container {
   height: 100%;
 }
@@ -19,33 +20,35 @@
   padding-left: 1rem;
   padding-right: 2rem;
 }
+
 @media (min-width: 550px) {
   .header-layout {
     padding-left: 2rem;
   }
 }
-@media (min-width: 750px) {
-  .header-layout {
-    padding-left: 0;
-  }
-}
 
 #logo {
-  flex-grow: 1;
-  display: none;
-  /* Make the logo smaller on small screens */
+  display: flex;
 }
-@media (min-width: 500px) {
-  #logo {
-    display: flex;
-    width: 120px;
-  }
+
+.language-column {
+  flex-grow: 1;
+  align-items: center;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .language-menu {
-  display: flex;
-  align-items: center;
-  height: 100%;
+  display: none;
+}
+
+@media (min-width: 750px) {
+  .language-menu {
+    height: 100%;
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 .language-menu-item {
@@ -55,25 +58,19 @@
   align-items: center;
   color: var(--linkColor);
 }
+
 .language-menu-item:hover {
   color: var(--activeLinkColor);
 }
+
 .language-menu-item.is-active {
   display: none;
   color: var(--activeLinkColor);
   margin-bottom: -2px;
 }
-@media (max-width: 749px) {
-  .language-menu-item:nth-child(n + 4) {
-    display: none;
-  }
-}
 
 .language-menu-mobile {
   margin-left: 1rem;
-}
-.language-menu-mobile option:nth-child(-n + 4) {
-  display: none;
 }
 
 @media (min-width: 750px) {
@@ -91,6 +88,7 @@
   right: 0;
   top: 0;
 }
+
 @media (min-width: 900px) {
   #github-corner {
     display: block;
