--- a/src/css/header.css
+++ b/src/css/header.css
@@ -17,14 +17,7 @@
   display: flex;
   align-items: center;
   height: 100%;
-  padding-left: 1rem;
-  padding-right: 2rem;
-}
-
-@media (min-width: 550px) {
-  .header-layout {
-    padding-left: 2rem;
-  }
+  padding: 0 1rem;
 }
 
 #logo {
